# Terminal-Echoes

./: README.md  manage.py  pyproject.toml
main_app/: admin.py  models.py  serializers.py  urls.py  views.py
main_app/migrations/: 0001_initial.py
main_app/models/: __init__.py  characters.py  game_objects.py  location.py
terminal_echoes/: asgi.py  settings.py  urls.py  wsgi.py
